Cambios de la Actividad 10 Se agregan Excepciones y acciones al incumplir